@@ -16,6 +16,7 @@ The original idea came from adopting what Tom Christiansen calls his 'Standard P
 http://www.perl.com/pub/2012/04/perlunicook-standard-preamble.html
 All tests still work after removing that line.
 - Remove Build.PL. Ship only Makefile.PL.
+- Remove .gitignore from MANIFEST.
 EOT
 
 [V 1.26]
