@@ -4,7 +4,7 @@
       "Sean M. Burke <sburke@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Module::Build version 0.4211",
+   "generated_by" : "Module::Build version 0.4211, CPAN::Meta::Converter version 2.143240",
    "license" : [
       "artistic_2"
    ],
@@ -16,20 +16,21 @@
    "prereqs" : {
       "build" : {
          "requires" : {
-            "Test::More" : 1.001014,
-            "Test::Pod" : 1.48
+            "ExtUtils::MakeMaker" : "0"
          }
       },
       "configure" : {
          "requires" : {
-            "Module::Build" : 0.4211
+            "ExtUtils::MakeMaker" : "0"
          }
       },
       "runtime" : {
          "requires" : {
-            "File::Slurp::Tiny" : 0.003,
-            "File::Spec" : 3.4,
-            "File::Temp" : 0.19,
+            "File::Slurp::Tiny" : "0.003",
+            "File::Spec" : "3.4",
+            "File::Temp" : "0.19",
+            "Test::More" : "1.001014",
+            "Test::Pod" : "1.48",
             "strict" : "0",
             "warnings" : "0"
          }
